cmake_minimum_required(VERSION 3.0)
project(FreeImage)

set(FreeImage_DEF -DFREEIMAGE_LIB)

macro(make_option PLUGIN STATE)
    option(FreeImage_${PLUGIN} "Build with ${PLUGIN} support." ${STATE})
endmacro()


make_option(BMP ON)
make_option(TARGA ON)
make_option(CUT ON)
make_option(DDS ON)
make_option(GIF ON)
make_option(XBM ON)
make_option(XPM ON)

make_option(EXR OFF)
make_option(G3 OFF)
make_option(HDR OFF)
make_option(ICO OFF)
make_option(IFF OFF)
make_option(J2K OFF)
make_option(JNG OFF)
make_option(JP2 OFF)
make_option(JPEG OFF)
make_option(JXR OFF)
make_option(KOALA OFF)
make_option(MNG OFF)
make_option(PCD OFF)
make_option(PCX OFF)
make_option(PFM OFF)
make_option(PSD OFF)
make_option(PICT OFF)
make_option(PNG OFF)
make_option(PNM OFF)
make_option(PFM OFF)
make_option(RAS OFF)
make_option(RAW OFF)
make_option(SGI OFF)
make_option(TIFF OFF)
make_option(WBMP OFF)
make_option(WebP OFF)

if (FreeImage_ExternalTarget)
    set(TargetFolders ${FreeImage_TargetFolders})
    set(TargetName    ${FreeImage_TargetName})
    set(TargetGroup   ${FreeImage_TargetGroup})
else()
    set(TargetFolders FALSE)
    set(TargetName  FreeImage)
    unset(TargetGroup )
endif()

subdirs(Source)
